@@ -1,3 +1,8 @@
+2009-02-04  Vincent Untz  <vuntz@gnome.org>
+
+	* src/gdict-applet.c: (gdict_applet_icon_toggled_cb): return something.
+	Part of bug #570422.
+
 2008-12-23  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/gdict-applet.c: use the right order when passing arguments
