@@ -1,3 +1,10 @@
+2009-02-04  Vincent Untz  <vuntz@gnome.org>
+
+	* gtkmessagearea.c: add an include to fix warnings
+	* logview-log.c: (read_gzip_header):
+	* logview-manager.c: (logview_manager_get_if_loaded): return something.
+	Part of bug #570422.
+
 2009-01-30  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* logview-loglist.c: (tree_selection_changed_cb),
